--- a/locator_id/report.html
+++ b/locator_id/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7001],[],[[4,0,0,[],[1,297,6704],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,7290],[],[[4,0,0,[],[1,238,7051],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ts-002","*D:\\Testcase\\ts-002.robot","*ts-002.robot","*TS-002: Open Google website with SE + Chrome-Driver"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Ts-001","*D:\\Testcase\\locator_id\\ts-001.robot","*ts-001.robot","*TC-001: Testing open the best website"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Ts-002","name":"Ts-002","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Ts-001","name":"Ts-001","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1677119747960;
+window.output["baseMillis"] = 1677120697271;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7016;
+window.output["generated"] = 7300;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
