--- a/locator_id/log.html
+++ b/locator_id/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,7290],[],[[4,0,0,[],[1,238,7051],[[0,5,0,0,0,6,0,0,[1,239,6033],[[0,7,8,0,9,6,0,0,[1,239,6033],[[240,2,10]]]]],[0,11,12,0,13,14,0,0,[1,6273,1015],[[7288,2,15]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,5626],[],[[4,0,0,[],[1,203,5420],[[0,5,0,0,0,6,0,0,[1,203,3201],[[0,7,8,0,9,6,0,0,[1,203,3201],[[203,2,10]]]]],[0,11,8,0,12,13,0,0,[1,3405,79],[[3406,2,14]]],[0,15,8,0,16,17,0,0,[1,3484,74],[[3485,2,18],[3517,2,19],[3558,2,20]]],[0,21,8,0,22,23,0,0,[1,3558,57],[[3559,2,24]]],[0,25,26,0,27,28,0,0,[1,3615,2006],[[5621,2,29]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ts-001","*D:\\Testcase\\locator_id\\ts-001.robot","*ts-001.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"https://www.itd.kmutnb.ac.th/\">https://www.itd.kmutnb.ac.th/\x3c/a>'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*1","*Slept 1 second"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Ts-001","*D:\\Testcase\\locator_id\\ts-001.robot","*ts-001.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"https://account.kmutnb.ac.th/web/user/login\">https://account.kmutnb.ac.th/web/user/login\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=loginform-username, s6307012660127","*Typing text 's6307012660127' into text field 'id=loginform-username'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=loginform-password, 1MoolyFTW","*Typing password into text field 'id=loginform-password'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//button[@type='submit']","*Clicking button 'xpath=//button[@type='submit']'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:07","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Ts-001","name":"Ts-001","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:06","fail":0,"id":"s1","label":"Ts-001","name":"Ts-001","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1677120697271;
+window.output["baseMillis"] = 1677122688142;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 7300;
+window.output["generated"] = 5659;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
