--- a/locator_id/log.html
+++ b/locator_id/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,5386],[],[[4,0,0,[],[1,188,5198],[[0,5,0,0,0,6,0,0,[1,188,2630],[[0,7,8,0,9,6,0,0,[1,188,2630],[[188,2,10]]]]],[0,11,8,0,12,13,0,0,[1,2819,78],[[2819,2,14]]],[0,15,8,0,16,17,0,0,[1,2897,79],[[2898,2,18],[2933,2,19],[2976,2,20]]],[0,21,8,0,22,23,0,0,[1,2976,396],[[2977,2,24]]],[0,25,26,0,27,28,0,0,[1,3373,2013],[[5386,2,29]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,3649],[],[[4,0,0,[],[1,188,3461],[[0,5,0,0,0,6,0,0,[1,188,1296],[[0,7,8,0,9,6,0,0,[1,188,1295],[[188,2,10]]]]],[0,11,8,0,12,13,0,0,[1,1484,83],[[1485,2,14]]],[0,15,8,0,16,17,0,0,[1,1568,75],[[1568,2,18],[1604,2,19],[1643,2,20]]],[0,21,22,0,23,24,0,0,[1,1644,2005],[[3649,2,25]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ts-001","*D:\\Testcase\\locator_id\\ts-001.robot","*ts-001.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"http://klogic2.kmutnb.ac.th:8080/kris/index.jsp\">http://klogic2.kmutnb.ac.th:8080/kris/index.jsp\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@type='text'], 6307012660020","*Typing text '6307012660020' into text field 'xpath=//input[@type='text']'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@type='password'], 1104300418061","*Typing password into text field 'xpath=//input[@type='password']'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@type='submit']","*Clicking button 'xpath=//input[@type='submit']'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Ts-002","*D:\\Testcase\\locator_id\\ts-002.robot","*ts-002.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"file:///C:/Users/5A09-02/Desktop/ep01/ex00.html\">file:///C:/Users/5A09-02/Desktop/ep01/ex00.html\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=username-box, test","*Typing text 'test' into text field 'id=username-box'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=password-box, test","*Typing password into text field 'id=password-box'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:05","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Ts-001","name":"Ts-001","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Ts-002","name":"Ts-002","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1677123332074;
+window.output["baseMillis"] = 1677124594218;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 5401;
+window.output["generated"] = 3664;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
