--- a/locator_id/log.html
+++ b/locator_id/log.html
@@ -1803,13 +1803,13 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3649],[],[[4,0,0,[],[1,188,3461],[[0,5,0,0,0,6,0,0,[1,188,1296],[[0,7,8,0,9,6,0,0,[1,188,1295],[[188,2,10]]]]],[0,11,8,0,12,13,0,0,[1,1484,83],[[1485,2,14]]],[0,15,8,0,16,17,0,0,[1,1568,75],[[1568,2,18],[1604,2,19],[1643,2,20]]],[0,21,22,0,23,24,0,0,[1,1644,2005],[[3649,2,25]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,3573],[],[[4,0,0,[],[1,203,3370],[[0,5,0,0,0,6,0,0,[1,203,1206],[[0,7,8,0,9,6,0,0,[1,203,1206],[[203,2,10]]]]],[0,11,8,0,12,13,0,0,[1,1410,81],[[1410,2,14]]],[0,15,8,0,16,17,0,0,[1,1491,68],[[1492,2,18],[1525,2,19],[1559,2,20]]],[0,21,22,0,23,24,0,0,[1,1559,2014],[[3573,2,25]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Ts-002","*D:\\Testcase\\locator_id\\ts-002.robot","*ts-002.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"file:///C:/Users/5A09-02/Desktop/ep01/ex00.html\">file:///C:/Users/5A09-02/Desktop/ep01/ex00.html\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=username-box, test","*Typing text 'test' into text field 'id=username-box'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=password-box, test","*Typing password into text field 'id=password-box'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Ts-002","*D:\\Testcase\\locator_id\\ts-002.robot","*ts-002.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"file:///C:/Users/5A09-02/Desktop/ep01/ex01.html\">file:///C:/Users/5A09-02/Desktop/ep01/ex01.html\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@v='user'], test","*Typing text 'test' into text field 'xpath=//input[@v='user']'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@v='password'], test","*Typing password into text field 'xpath=//input[@v='password']'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
 </script>
 <script type="text/javascript">
 window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Ts-002","name":"Ts-002","pass":1,"skip":0}]];
@@ -1818,10 +1818,10 @@ window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","p
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1677124594218;
+window.output["baseMillis"] = 1677124837911;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3664;
+window.output["generated"] = 3587;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
