--- a/test-ex/log.html
+++ b/test-ex/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3548],[],[[4,0,0,[],[1,226,3318],[[0,5,0,0,0,6,0,0,[1,227,1153],[[0,7,8,0,9,6,0,0,[1,227,1152],[[228,2,10]]]]],[0,11,8,0,12,13,0,0,[1,1380,82],[[1381,2,14]]],[0,15,8,0,16,17,0,0,[1,1462,67],[[1463,2,18],[1496,2,19],[1529,2,20]]],[0,21,22,0,23,24,0,0,[1,1529,2014],[[3543,2,25]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,3631],[],[[4,0,0,[],[1,203,3428],[[0,5,0,0,0,6,0,0,[1,203,1251],[[0,7,8,0,9,6,0,0,[1,203,1251],[[203,2,10]]]]],[0,11,8,0,12,13,0,0,[1,1455,87],[[1456,2,14]]],[0,15,8,0,16,17,0,0,[1,1542,75],[[1543,2,18],[1578,2,19],[1617,2,20]]],[0,21,22,0,23,24,0,0,[1,1617,2014],[[3631,2,25]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test-Ex01","*D:\\Testcase\\test-ex\\test-ex01.robot","*test-ex01.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"file:///C:/Users/5A09-02/Desktop/ep01/ex01.html\">file:///C:/Users/5A09-02/Desktop/ep01/ex01.html\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@v='user'], test","*Typing text 'test' into text field 'xpath=//input[@v='user']'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//input[@v='password'], test","*Typing password into text field 'xpath=//input[@v='password']'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test-Ex03","*D:\\Testcase\\test-ex\\test-ex03.robot","*test-ex03.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"file:///C:/Users/5A09-02/Desktop/ep01/ex03.html\">file:///C:/Users/5A09-02/Desktop/ep01/ex03.html\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//div[contains(@v,'username')]/input, test","*Typing text 'test' into text field 'xpath=//div[contains(@v,'username')]/input'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//div[contains(@v,'password')]/input, test","*Typing password into text field 'xpath=//div[contains(@v,'password')]/input'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Test-Ex01","name":"Test-Ex01","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Test-Ex03","name":"Test-Ex03","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1677126133430;
+window.output["baseMillis"] = 1677126432753;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3579;
+window.output["generated"] = 3631;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
