--- a/test-ex/log.html
+++ b/test-ex/log.html
@@ -1803,25 +1803,25 @@ function stopPropagation(event) {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3631],[],[[4,0,0,[],[1,203,3428],[[0,5,0,0,0,6,0,0,[1,203,1251],[[0,7,8,0,9,6,0,0,[1,203,1251],[[203,2,10]]]]],[0,11,8,0,12,13,0,0,[1,1455,87],[[1456,2,14]]],[0,15,8,0,16,17,0,0,[1,1542,75],[[1543,2,18],[1578,2,19],[1617,2,20]]],[0,21,22,0,23,24,0,0,[1,1617,2014],[[3631,2,25]]]]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4089],[],[[4,0,0,[],[1,197,3888],[[0,5,0,0,0,6,0,0,[1,197,1185],[[0,7,8,0,9,6,0,0,[1,197,1185],[[197,2,10]]]]],[0,11,8,0,12,13,0,0,[1,1383,84],[[1383,2,14]]],[0,15,8,0,16,17,0,0,[1,1468,68],[[1468,2,18],[1502,2,19],[1536,2,20]]],[0,11,8,0,12,21,0,0,[1,1536,74],[[1537,2,22]]],[0,23,8,0,24,25,0,0,[1,1610,56],[[1611,2,26]]],[0,27,8,0,28,29,0,0,[1,1667,56],[[1667,2,30]]],[0,31,8,0,32,33,0,0,[1,1724,349],[[1724,2,34]]],[0,35,36,0,37,38,0,0,[1,2074,2009],[[4083,2,39]]]]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test-Ex03","*D:\\Testcase\\test-ex\\test-ex03.robot","*test-ex03.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*Opening browser 'chrome' to base url '<a href=\"file:///C:/Users/5A09-02/Desktop/ep01/ex03.html\">file:///C:/Users/5A09-02/Desktop/ep01/ex03.html\x3c/a>'.","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//div[contains(@v,'username')]/input, test","*Typing text 'test' into text field 'xpath=//div[contains(@v,'username')]/input'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//div[contains(@v,'password')]/input, test","*Typing password into text field 'xpath=//div[contains(@v,'password')]/input'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test-Ex01-Assignment","*D:\\Testcase\\test-ex\\test-ex01-assignment.robot","*test-ex01-assignment.robot","*TC-001: Testing open the best website","*Open he Best Webbrower","*${url}, ${brower}","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","eNqlzLEKwjAURuFXuXTJZG8VHCy1ILo7OZc0/DXBpAn3RvTxFV/B5Uwf51qwhvVOs+SXQsg4LznBUM00WwU9JZIZLHnBcmyWENEz87nn25cr70/dYdPt+AJ91FwYpdv+MmmyMU54O4gLitbXFJvxz8HAdjTtB2K8O+0=","*Input Text","*<p>Types the given <code>text\x3c/code> into the text field identified by <code>locator\x3c/code>.\x3c/p>","*id=username-box, user","*Typing text 'user' into text field 'id=username-box'.","*Input Password","*<p>Types the given password into the text field identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//div[@v='password']/input, passwd","*Typing password into text field 'xpath=//div[@v='password']/input'.","*Temporally setting log level to: NONE","*Log level changed from NONE to INFO.","*xpath=//input[@doppio='nickname'], Eed","*Typing text 'Eed' into text field 'xpath=//input[@doppio='nickname']'.","*Select From List By Value","*<p>Selects options from selection list <code>locator\x3c/code> by <code>values\x3c/code>.\x3c/p>","*id=company, doppio","*Selecting options from selection list 'id=company' by value doppio.","*Select Checkbox","*<p>Selects the checkbox identified by <code>locator\x3c/code>.\x3c/p>","*id=op1","*Selecting checkbox 'id=op1'.","*Click Button","*<p>Clicks the button identified by <code>locator\x3c/code>.\x3c/p>","*xpath=//button[@id]","*Clicking button 'xpath=//button[@id]'.","*Sleep","*BuiltIn","*<p>Pauses the test executed for the given time.\x3c/p>","*2","*Slept 2 seconds"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Test-Ex03","name":"Test-Ex03","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Test-Ex01-Assignment","name":"Test-Ex01-Assignment","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1677126432753;
+window.output["baseMillis"] = 1677128954374;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3631;
+window.output["generated"] = 4113;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
