--- a/test-ex/report.html
+++ b/test-ex/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,3631],[],[[4,0,0,[],[1,203,3428],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,4089],[],[[4,0,0,[],[1,197,3888],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Test-Ex03","*D:\\Testcase\\test-ex\\test-ex03.robot","*test-ex03.robot","*TC-001: Testing open the best website"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test-Ex01-Assignment","*D:\\Testcase\\test-ex\\test-ex01-assignment.robot","*test-ex01-assignment.robot","*TC-001: Testing open the best website"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:03","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Test-Ex03","name":"Test-Ex03","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Test-Ex01-Assignment","name":"Test-Ex01-Assignment","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1677126432753;
+window.output["baseMillis"] = 1677128954374;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 3631;
+window.output["generated"] = 4113;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
